--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -16,7 +16,7 @@ block content
         h2.section-heading Josh Leadership
         p Re-engineering existing inefficient architectures with zero down-time and complete data integrity
       .row
-        .offset-lg-2.col-lg-4.col-sm-6
+        .col-lg-4.col-sm-6
           .card.card-team
             img.img-fluid(src=asset_url + "images/core-gautam-rege@2x.jpg" alt="Gautam Rege")
             .card-body
@@ -52,7 +52,7 @@ block content
             .card-body
               .person-info
                 h5 Sameer Tilak
-                p.designation Director
+                p.designation Head of Engineering
               .social-media-links
                 a(href="https://www.linkedin.com/in/sameer-tilak-425a825/", target="_blank")
                   svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 43.91 43.795')
@@ -67,7 +67,7 @@ block content
             .card-body
               .person-info
                 h5 Sachin Shintre
-                p.designation Director
+                p.designation Head of Engineering
               .social-media-links
                 a(href="https://www.linkedin.com/in/shintre/", target="_blank")
                   svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 43.91 43.795')
@@ -92,7 +92,23 @@ block content
                   svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 43.957 42.855')
                     path.svg-fill.-white(d='M225.936,241.212a21.466,21.466,0,0,0-21.466,21.466h0a21.475,21.475,0,0,0,14.673,20.34c1.074.2,1.464-.468,1.464-1.041s0-2.2-.028-3.995c-5.964,1.3-7.229-2.526-7.229-2.526a5.683,5.683,0,0,0-2.38-3.136c-1.953-1.33.146-1.306.146-1.306a4.52,4.52,0,0,1,3.291,2.209c1.912,3.279,5.02,2.335,6.228,1.782A4.6,4.6,0,0,1,222,272.157c-4.759-.541-9.763-2.384-9.763-10.6a8.319,8.319,0,0,1,2.213-5.772,7.813,7.813,0,0,1,.212-5.7s1.8-.578,5.886,2.2a20.339,20.339,0,0,1,10.739,0c4.092-2.77,5.886-2.2,5.886-2.2a7.786,7.786,0,0,1,.216,5.7,8.283,8.283,0,0,1,2.2,5.756c0,8.238-5.02,10.04-9.8,10.577a5.112,5.112,0,0,1,1.456,3.97c0,2.848-.028,5.191-.028,5.882,0,.57.407,1.22,1.477,1.041a21.446,21.446,0,0,0-6.745-41.806Z', transform='translate(-203.97 -240.7)')              
 
-        .offset-lg-2.col-lg-4.col-sm-6
+        .col-lg-4.col-sm-6
+          .card.card-team
+            img.img-fluid(src="images/core-vaibhavi@2x.jpg" alt="Vaibhavi")
+            .card-body
+              .person-info
+                h5 Vaibhavi
+                p.designation Director
+
+        .col-lg-4.col-sm-6
+          .card.card-team
+            img.img-fluid(src="images/core-sundari@2x.jpg" alt="Sundari")
+            .card-body
+              .person-info
+                h5 Sundari
+                p.designation Director
+
+        .col-lg-4.col-sm-6
           .card.card-team
             img.img-fluid(src=asset_url + "images/core_avadhoot@2x.jpg" alt="Avadhoot Bhatye")
             .card-body
