--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -7,59 +7,154 @@
 .josh-leadership-wrapper {
   padding: 2rem 0 0; }
 
-.leadership-item {
-  flex: 0 0 100%;
-  width: 100%;
-  padding: 0 1rem;
-  margin-bottom: 1rem; }
+.leadership-row {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.5rem;
+  margin: 0 1rem; }
   @media (min-width: 992px) {
-    .leadership-item {
-      flex: 0 0 28.125rem;
-      width: 28.125rem;
-      padding: 0 0.5rem; } }
-  .leadership-item .leader-profile-wrap img {
-    height: 100%; }
-  .leadership-item .leader-profile-wrap,
-  .leadership-item .leader-info {
-    flex: 0 0 50%; }
-  .leadership-item .leader-info {
-    padding: 0.75rem; }
-    .leadership-item .leader-info .quotes-img {
-      width: 1.5rem;
-      height: 1.25rem; }
-    .leadership-item .leader-info p,
-    .leadership-item .leader-info h5,
-    .leadership-item .leader-info label {
-      color: #fff; }
-    .leadership-item .leader-info p {
-      font-size: 0.875rem;
-      line-height: 1.1875rem; }
-      @media (min-width: 992px) {
-        .leadership-item .leader-info p {
-          font-size: 0.875rem; } }
-    .leadership-item .leader-info h5,
-    .leadership-item .leader-info label {
-      font-size: 0.6875rem;
-      line-height: 0.9375rem; }
-      @media (min-width: 992px) {
-        .leadership-item .leader-info h5,
-        .leadership-item .leader-info label {
-          font-size: 0.875rem;
-          line-height: 1.1875rem; } }
-    .leadership-item .leader-info::before {
-      content: "";
-      position: absolute;
-      display: block;
-      width: 0;
-      height: 0;
-      top: 0.75rem;
-      left: -0.5625rem;
-      border-top: 0.625rem solid transparent;
-      border-bottom: 0.625rem solid transparent;
+    .leadership-row {
+      grid-template-columns: repeat(2, 434px);
+      gap: 0.75rem;
+      margin: 0; } }
+  .leadership-row:not(:first-child) {
+    margin-top: 0.5rem; }
+    @media (min-width: 992px) {
+      .leadership-row:not(:first-child) {
+        margin-top: 0.75rem; } }
+
+.leadership-item .leader-profile-wrap img {
+  height: 13.75rem; }
+
+.leadership-item .leader-profile-wrap,
+.leadership-item .leader-info {
+  flex: 0 0 50%; }
+
+.leadership-item .leader-info {
+  padding: 0.75rem; }
+  .leadership-item .leader-info .quotes-img {
+    width: 1.5rem;
+    height: 1.25rem; }
+  .leadership-item .leader-info p,
+  .leadership-item .leader-info h5,
+  .leadership-item .leader-info label {
+    color: #fff; }
+  .leadership-item .leader-info p {
+    font-size: 0.875rem;
+    line-height: 1.1875rem; }
+    @media (min-width: 992px) {
+      .leadership-item .leader-info p {
+        font-size: 0.875rem; } }
+  .leadership-item .leader-info h5,
+  .leadership-item .leader-info label {
+    font-size: 0.6875rem;
+    line-height: 0.9375rem; }
+    @media (min-width: 992px) {
+      .leadership-item .leader-info h5,
+      .leadership-item .leader-info label {
+        font-size: 0.875rem;
+        line-height: 1.1875rem; } }
+  .leadership-item .leader-info::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    top: 0.75rem;
+    left: -0.5625rem;
+    border-top: 0.625rem solid transparent;
+    border-bottom: 0.625rem solid transparent;
+    border-right: 0.625rem solid #697579; }
+  .leadership-item .leader-info.-light-grey {
+    background-color: #697579; }
+    .leadership-item .leader-info.-light-grey::before {
       border-right: 0.625rem solid #697579; }
-    .leadership-item .leader-info.-left::before {
-      content: none; }
-    .leadership-item .leader-info.-left::after {
+  .leadership-item .leader-info.-dark-blue {
+    background-color: #5886b2; }
+    .leadership-item .leader-info.-dark-blue::before {
+      border-right: 0.625rem solid #5886b2; }
+    .leadership-item .leader-info.-dark-blue::after {
+      border-left: 0.625rem solid #5886b2; }
+  .leadership-item .leader-info.-light-blue {
+    background-color: #77a9d9; }
+    .leadership-item .leader-info.-light-blue::before {
+      border-right: 0.625rem solid #77a9d9; }
+    .leadership-item .leader-info.-light-blue::after {
+      border-left: 0.625rem solid #77a9d9; }
+  .leadership-item .leader-info.-dark-grey {
+    background-color: #575353; }
+    .leadership-item .leader-info.-dark-grey::before {
+      border-right: 0.625rem solid #575353; }
+    .leadership-item .leader-info.-dark-grey::after {
+      border-left: 0.625rem solid #575353; }
+
+.leadership-item.founders-col {
+  order: 2; }
+  @media (min-width: 992px) {
+    .leadership-item.founders-col {
+      order: unset; } }
+
+.leadership-item:nth-child(even) {
+  flex-direction: row-reverse; }
+  .leadership-item:nth-child(even) .leader-info::before {
+    content: unset; }
+  .leadership-item:nth-child(even) .leader-info::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    top: 0.75rem;
+    right: -0.5625rem;
+    border-top: 0.625rem solid transparent;
+    border-bottom: 0.625rem solid transparent;
+    border-left: 0.625rem solid #697579; }
+  .leadership-item:nth-child(even) .leader-info.-light-blue::after {
+    border-left: 0.625rem solid #77a9d9; }
+  @media (min-width: 992px) {
+    .leadership-item:nth-child(even) {
+      flex-direction: unset; }
+      .leadership-item:nth-child(even) .leader-info::after {
+        content: unset; }
+      .leadership-item:nth-child(even) .leader-info::before {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        top: 0.75rem;
+        left: -0.5625rem;
+        border-top: 0.625rem solid transparent;
+        border-bottom: 0.625rem solid transparent;
+        border-right: 0.625rem solid #697579; }
+      .leadership-item:nth-child(even) .leader-info.-light-blue::before {
+        border-right: 0.625rem solid #77a9d9; } }
+
+.leadership-row.-first-row .leadership-item-wrapper:last-child {
+  margin-top: 0.5rem; }
+  @media (min-width: 992px) {
+    .leadership-row.-first-row .leadership-item-wrapper:last-child {
+      margin-top: 0.75rem; } }
+  .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::before {
+    content: unset; }
+  .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    top: 0.75rem;
+    right: -0.5625rem;
+    border-top: 0.625rem solid transparent;
+    border-bottom: 0.625rem solid transparent;
+    border-left: 0.625rem solid #5886b2; }
+
+@media (min-width: 992px) {
+  .leadership-row.-second-row .leadership-item:nth-child(4n + 3), .leadership-row.-second-row .leadership-item:nth-child(4n + 4) {
+    flex-direction: row-reverse; }
+    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::before, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::before {
+      content: unset; }
+    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::after {
       content: "";
       position: absolute;
       display: block;
@@ -70,37 +165,10 @@
       border-top: 0.625rem solid transparent;
       border-bottom: 0.625rem solid transparent;
       border-left: 0.625rem solid #697579; }
-    .leadership-item .leader-info.-light-grey {
-      background-color: #697579; }
-      .leadership-item .leader-info.-light-grey::before {
-        border-right: 0.625rem solid #697579; }
-    .leadership-item .leader-info.-dark-blue {
-      background-color: #5886b2; }
-      .leadership-item .leader-info.-dark-blue::after {
-        border-left: 0.625rem solid #5886b2; }
-      .leadership-item .leader-info.-dark-blue::before {
-        border-right: 0.625rem solid #5886b2; }
-    .leadership-item .leader-info.-light-blue {
-      background-color: #77a9d9; }
-      .leadership-item .leader-info.-light-blue::before {
-        border-right: 0.625rem solid #77a9d9; }
-      .leadership-item .leader-info.-light-blue::after {
-        border-left: 0.625rem solid #77a9d9; }
-    .leadership-item .leader-info.-dark-grey {
-      background-color: #575353; }
-      .leadership-item .leader-info.-dark-grey::before {
-        border-right: 0.625rem solid #575353; }
-      .leadership-item .leader-info.-dark-grey::after {
-        border-left: 0.625rem solid #575353; }
-  .leadership-item.founders-col {
-    order: 2; }
-    @media (min-width: 992px) {
-      .leadership-item.founders-col {
-        order: unset; } }
-
-@media (min-width: 992px) {
-  .leadership-row:last-child .leadership-item {
-    margin-bottom: 0; } }
+    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-light-blue::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-light-blue::after {
+      border-left: 0.625rem solid #77a9d9; }
+    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-dark-grey::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-dark-grey::after {
+      border-left: 0.625rem solid #575353; } }
 
 .professional-platforms a {
   background-color: #fff;
