--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -4,21 +4,29 @@
   padding: 2rem 0 0;
 }
 
-.leadership-item {
-  flex: 0 0 100%;
-  width: 100%;
-  padding: 0 1rem;
-  margin-bottom: 1rem;
+.leadership-row {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.5rem;
+  margin: 0 1rem;
 
   @include media-breakpoint-up(lg) {
-    flex: 0 0 28.125rem;
-    width: 28.125rem;
-    padding: 0 0.5rem;
+    grid-template-columns: repeat(2, 434px);
+    gap: 0.75rem;
+    margin: 0;
   }
 
+  &:not(:first-child) {
+    margin-top: 0.5rem;
+    @include media-breakpoint-up(lg) {
+      margin-top: 0.75rem;
+    }
+  }
+}
+.leadership-item {
   .leader-profile-wrap {
     img {
-      height: 100%;
+      height: 13.75rem;
     }
   }
   .leader-profile-wrap,
@@ -72,24 +80,6 @@
       border-right: 0.625rem solid $north-gray;
     }
 
-    &.-left {
-      &::before {
-        content: none;
-      }
-      &::after {
-        content: "";
-        position: absolute;
-        display: block;
-        width: 0;
-        height: 0;
-        top: 0.75rem;
-        right: -0.5625rem;
-        border-top: 0.625rem solid transparent;
-        border-bottom: 0.625rem solid transparent;
-        border-left: 0.625rem solid $north-gray;
-      }
-    }
-
     &.-light-grey {
       background-color: $north-gray;
       &::before {
@@ -99,11 +89,12 @@
 
     &.-dark-blue {
       background-color: $blue-smart;
-      &::after {
-        border-left: 0.625rem solid $blue-smart;
-      }
       &::before {
         border-right: 0.625rem solid $blue-smart;
+      }
+
+      &::after {
+        border-left: 0.625rem solid $blue-smart;
       }
     }
     &.-light-blue {
@@ -134,13 +125,136 @@
       order: unset;
     }
   }
+
+  &:nth-child(even) {
+    flex-direction: row-reverse;
+
+    .leader-info {
+      &::before {
+        content: unset;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        top: 0.75rem;
+        right: -0.5625rem;
+        border-top: 0.625rem solid transparent;
+        border-bottom: 0.625rem solid transparent;
+        border-left: 0.625rem solid $north-gray;
+      }
+
+      &.-light-blue {
+        &::after {
+          border-left: 0.625rem solid $jordy-blue;
+        }
+      }
+    }
+
+    @include media-breakpoint-up(lg) {
+      flex-direction: unset;
+
+      .leader-info {
+        &::after {
+          content: unset;
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          display: block;
+          width: 0;
+          height: 0;
+          top: 0.75rem;
+          left: -0.5625rem;
+          border-top: 0.625rem solid transparent;
+          border-bottom: 0.625rem solid transparent;
+          border-right: 0.625rem solid $north-gray;
+        }
+
+        &.-light-blue {
+          &::before {
+            border-right: 0.625rem solid $jordy-blue;
+          }
+        }
+      }
+    }
+  }
 }
 
 .leadership-row {
-  &:last-child {
+  &.-first-row {
+    .leadership-item-wrapper {
+      &:last-child {
+        margin-top: 0.5rem;
+
+        @include media-breakpoint-up(lg) {
+          margin-top: 0.75rem;
+        }
+
+        .leader-info {
+          &::before {
+            content: unset;
+          }
+
+          &::after {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 0;
+            height: 0;
+            top: 0.75rem;
+            right: -0.5625rem;
+            border-top: 0.625rem solid transparent;
+            border-bottom: 0.625rem solid transparent;
+            border-left: 0.625rem solid $blue-smart;
+          }
+        }
+      }
+    }
+  }
+
+  &.-second-row {
     .leadership-item {
-      @include media-breakpoint-up(lg) {
-        margin-bottom: 0;
+      &:nth-child(4n + 3),
+      &:nth-child(4n + 4) {
+        @include media-breakpoint-up(lg) {
+          flex-direction: row-reverse;
+
+          .leader-info {
+            &::before {
+              content: unset;
+            }
+
+            &::after {
+              content: "";
+              position: absolute;
+              display: block;
+              width: 0;
+              height: 0;
+              top: 0.75rem;
+              right: -0.5625rem;
+              border-top: 0.625rem solid transparent;
+              border-bottom: 0.625rem solid transparent;
+              border-left: 0.625rem solid $north-gray;
+            }
+
+            &.-light-blue {
+              &::after {
+                border-left: 0.625rem solid $jordy-blue;
+              }
+            }
+
+            &.-dark-grey {
+              &::after {
+                border-left: 0.625rem solid $mortor;
+              }
+            }
+          }
+        }
       }
     }
   }
