--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -24,7 +24,7 @@
         margin-top: 0.75rem; } }
 
 .leadership-item .leader-profile-wrap img {
-  height: 13.75rem; }
+  height: 100%; }
 
 .leadership-item .leader-profile-wrap,
 .leadership-item .leader-info {
@@ -41,10 +41,12 @@
     color: #fff; }
   .leadership-item .leader-info p {
     font-size: 0.875rem;
-    line-height: 1.1875rem; }
+    line-height: 1.1875rem;
+    margin-bottom: 0.5rem; }
     @media (min-width: 992px) {
       .leadership-item .leader-info p {
-        font-size: 0.875rem; } }
+        font-size: 0.875rem;
+        margin-bottom: 1rem; } }
   .leadership-item .leader-info h5,
   .leadership-item .leader-info label {
     font-size: 0.6875rem;
@@ -130,31 +132,19 @@
       .leadership-item:nth-child(even) .leader-info.-light-blue::before {
         border-right: 0.625rem solid #77a9d9; } }
 
-.leadership-row.-first-row .leadership-item-wrapper:last-child {
-  margin-top: 0.5rem; }
+.leadership-row.-first-row .leadership-item-wrapper {
+  height: 12.1875rem; }
   @media (min-width: 992px) {
-    .leadership-row.-first-row .leadership-item-wrapper:last-child {
-      margin-top: 0.75rem; } }
-  .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::before {
-    content: unset; }
-  .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::after {
-    content: "";
-    position: absolute;
-    display: block;
-    width: 0;
-    height: 0;
-    top: 0.75rem;
-    right: -0.5625rem;
-    border-top: 0.625rem solid transparent;
-    border-bottom: 0.625rem solid transparent;
-    border-left: 0.625rem solid #5886b2; }
-
-@media (min-width: 992px) {
-  .leadership-row.-second-row .leadership-item:nth-child(4n + 3), .leadership-row.-second-row .leadership-item:nth-child(4n + 4) {
-    flex-direction: row-reverse; }
-    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::before, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::before {
+    .leadership-row.-first-row .leadership-item-wrapper {
+      height: unset; } }
+  .leadership-row.-first-row .leadership-item-wrapper:last-child {
+    margin-top: 0.5rem; }
+    @media (min-width: 992px) {
+      .leadership-row.-first-row .leadership-item-wrapper:last-child {
+        margin-top: 0.75rem; } }
+    .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::before {
       content: unset; }
-    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::after {
+    .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::after {
       content: "";
       position: absolute;
       display: block;
@@ -164,11 +154,33 @@
       right: -0.5625rem;
       border-top: 0.625rem solid transparent;
       border-bottom: 0.625rem solid transparent;
-      border-left: 0.625rem solid #697579; }
-    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-light-blue::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-light-blue::after {
-      border-left: 0.625rem solid #77a9d9; }
-    .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-dark-grey::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-dark-grey::after {
-      border-left: 0.625rem solid #575353; } }
+      border-left: 0.625rem solid #5886b2; }
+
+.leadership-row.-second-row .leadership-item {
+  height: 12.1875rem; }
+  @media (min-width: 992px) {
+    .leadership-row.-second-row .leadership-item {
+      height: unset; } }
+  @media (min-width: 992px) {
+    .leadership-row.-second-row .leadership-item:nth-child(4n + 3), .leadership-row.-second-row .leadership-item:nth-child(4n + 4) {
+      flex-direction: row-reverse; }
+      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::before, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::before {
+        content: unset; }
+      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        top: 0.75rem;
+        right: -0.5625rem;
+        border-top: 0.625rem solid transparent;
+        border-bottom: 0.625rem solid transparent;
+        border-left: 0.625rem solid #697579; }
+      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-light-blue::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-light-blue::after {
+        border-left: 0.625rem solid #77a9d9; }
+      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-dark-grey::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-dark-grey::after {
+        border-left: 0.625rem solid #575353; } }
 
 .professional-platforms a {
   background-color: #fff;
