--- a/src/components/team/team.scss
+++ b/src/components/team/team.scss
@@ -23,10 +23,11 @@
     }
   }
 }
+
 .leadership-item {
   .leader-profile-wrap {
     img {
-      height: 13.75rem;
+      height: 100%;
     }
   }
   .leader-profile-wrap,
@@ -50,9 +51,11 @@
     p {
       font-size: 0.875rem;
       line-height: 1.1875rem;
+      margin-bottom: 0.5rem;
 
       @include media-breakpoint-up(lg) {
         font-size: 0.875rem;
+        margin-bottom: 1rem;
       }
     }
 
@@ -188,6 +191,11 @@
 .leadership-row {
   &.-first-row {
     .leadership-item-wrapper {
+      height: 12.1875rem;
+
+      @include media-breakpoint-up(lg) {
+        height: unset;
+      }
       &:last-child {
         margin-top: 0.5rem;
 
@@ -219,6 +227,12 @@
 
   &.-second-row {
     .leadership-item {
+      height: 12.1875rem;
+
+      @include media-breakpoint-up(lg) {
+        height: unset;
+      }
+
       &:nth-child(4n + 3),
       &:nth-child(4n + 4) {
         @include media-breakpoint-up(lg) {
