--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -23,7 +23,8 @@ $assets_url: "../";
 $gray-10: #1a1a1a; // black 90%
 $gray-11: #1c1c1c;
 $gray-20: #333333; // black 80%
-$gray-40: #666666; // black 60%
+$gray-40: #666666;
+$gray-44: #707070; // black 60%
 $gray-60: #999999; // black 40%
 $gray-68: #adadad; // black 32%
 $gray-94: #efefef; // black 6%
@@ -65,6 +66,8 @@ $jordy-blue: #77a9d9;
 $blue-smart: #5886b2;
 $mortor: #575353;
 $burnt-sienna: #e86055;
+$rhino: #283755;
+$denim: #1270a8;
 
 //$colors: () !default;
 //$colors: map-merge((
